clinic list sayfasinda static degisiklik

--- a/src/views/admin/pages/confirm-clinic.ejs
+++ b/src/views/admin/pages/confirm-clinic.ejs
@@ -35,7 +35,7 @@
                   <thead>
                     <tr>
                       <th class="align-top border-bottom-0 wd-5"></th>
-                      <th class="border-bottom-0 w-20">Klinik İsmi</th>
+                      <th class="border-bottom-0 w-20"><%= __('9')  %> </th>
                       <th class="border-bottom-0 w-15">Katılma Tarihi</th>
                       <th class="border-bottom-0 w-30">Klinik Sahibi</th>
                       <th class="border-bottom-0 w-10">Aksiyon</th>
