--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -89,6 +89,22 @@
               <li class="nav-item buttons mt-2 mb-3">
                 <a href="/clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
+              <% if (user) { %>
+              <li class="nav-item buttons mt-2 mb-3 mx-0">
+                <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
+                  <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg></a>
+                <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mt-0 text-white" aria-labelledby="UserDropdown">
+                  <div class="dropdown-header"> 
+                    <p class="text-white mb-0">Busra Ceval</p>
+                    <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
+                  </div> 
+                  <a class="dropdown-item mb-2" href="/user"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a> 
+                </div>
+              </li>
+              <% } %>
               <% if (!user) { %>
                 <li class="nav-item buttons mt-2 mb-3">
                   <a href="/register" key="register" class="nav-link btn-second">Kayıt Ol</a>
@@ -143,9 +159,7 @@
                                   </form>
                                 </div>
                               </div>
-                            </div>
-
-
+                            </div>    
                   </li>
             </ul>
           </div>
@@ -162,7 +176,7 @@
             class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content">
             <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Aradığınız diyaliz merkezini bulun</div>
             <div key="centerEasy" class="tm-header-text mt-2 pr-5 px-5">Diyaliz merkezi bulmanın en hızlı ve en kolay
-              yolu</div> 
+              yolu</div>
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
               <div class="form-row tm-search-form-row">
                 <div class="form-group tm-form-element location-main">
@@ -196,7 +210,8 @@
                 </div>
                 <div class="col col-lg-4 text-center">
                   <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" />
-                    <span key="cancelEasy"> Rezervasyon iptal kolaylığı</span></h6>
+                    <span key="cancelEasy"> Rezervasyon iptal kolaylığı</span>
+                  </h6>
                 </div>
               </div>
             </div>
