--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -90,20 +90,22 @@
             <% if (!user) { %>
               <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
               <% } %>
-                <% if (user) { %>
-                  <li class="nav-item">
-                    <div class="dropdown mt-3">
-                      <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle mt-1 mx-2"
-                        id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
-                      </a>
-                      <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                        <li><a class="dropdown-item" href="#">Profil</a></li>
-                        <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <% } %>
+              <% if (user) { %>
+                <li class="nav-item buttons mt-2 mb-3 mx-0">
+                  <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
+                    <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                  </svg></a>
+                  <div class="dropdown-menu dropdown-menu-right bg-dark navbar-dropdown mr-2 mt-0 text-white" aria-labelledby="UserDropdown">
+                    <div class="dropdown-header"> 
+                      <p class="text-white mb-0">Busra Ceval</p>
+                      <p class="fw-light text-muted text-white">ceval2772@gmail.com</p>
+                    </div> 
+                    <a class="dropdown-item mb-2 text-white" href="/user"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i>Profil</a> 
+                  </div>
+                </li>
+                <% } %>
       </ul>
     </div>
   </div>
