--- a/src/views/user/partials/user-navbar.ejs
+++ b/src/views/user/partials/user-navbar.ejs
@@ -76,7 +76,7 @@
         <!-- <li class="nav-item">
           <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
         </li> -->
-        <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
+        <li class="nav-item"><button href="/clinic" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
         <% if (user) { %>
           <li class="nav-item buttons mt-2 mx-0">
             <a class="nav-link" id="UserDropdown" data-bs-toggle="dropdown" aria-expanded="false"> 
