--- a/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
@@ -107,11 +107,11 @@
             <div class="form-box">
               <div class="title">Tercüman Hizmeti</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ücretli" name="interpreterPrice" id="interpreterPrice" checked />
+                <input class="form-check-input" type="radio" value="Ücretli" name="interpreterPrice" id="interpreterPrice" checked />
                 <label class="form-check-label selected" for="interpreterPrice"> Ücretli </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ücretsiz" name="interpreterPrice" id="interpreterPrice" />
+                <input class="form-check-input" type="radio" value="Ücretsiz" name="interpreterPrice" id="interpreterPrice" />
                 <label class="form-check-label" for="interpreterPrice"> Ücretsiz </label>
               </div>
             </div>
