--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -37,46 +37,46 @@
             <div class="form-box">
               <div class="title">Merkezimizdeki Görevi</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Nefroloji Uzmanı" name="employeeJob" id="flexCheckChecked" checked />
+                <input class="form-check-input" type="radio" value="Nefroloji Uzmanı" name="employeeJob" id="flexCheckChecked" checked />
                 <label class="form-check-label selected" for="flexCheckChecked"> Nefroloji Uzmanı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Mesul Müdür" name="employeeJob" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Mesul Müdür" name="employeeJob" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Mesul Müdür </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Sorumlu Hekim" name="employeeJob" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Sorumlu Hekim" name="employeeJob" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Sorumlu Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Merkez Başhemşiresi" name="employeeJob" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Merkez Başhemşiresi" name="employeeJob" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Merkez Başhemşiresi </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Diyetisyen" name="employeeJob" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Diyetisyen" name="employeeJob" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
               </div>
             </div>
             <div class="form-box">
               <div class="title">Akademik Eğitim Durumunu Seçiniz</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Profesör" name="academicEducation" id="flexCheckChecked" checked />
+                <input class="form-check-input" type="radio" value="Profesör" name="academicEducation" id="flexCheckChecked" checked />
                 <label class="form-check-label selected" for="flexCheckChecked"> Profesör </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Uzman Hekim" name="academicEducation" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Uzman Hekim" name="academicEducation" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Uzman Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Doktor" name="academicEducation" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Doktor" name="academicEducation" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Doktor </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hemşire" name="academicEducation" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Hemşire" name="academicEducation" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Hemşire </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Diyetisyen" name="academicEducation" id="flexCheckChecked" />
+                <input class="form-check-input" type="radio" value="Diyetisyen" name="academicEducation" id="flexCheckChecked" />
                 <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
               </div>
             </div>
